@@ -1,5 +1,5 @@
 # OASIS_START
-# DO NOT EDIT (digest: 6bd53e977eb0344c13a4931cee326445)
+# DO NOT EDIT (digest: 601cd8d1511767ded1f8d4de16d08b0f)
 # Ignore VCS directories, you can use the same kind of rule outside 
 # OASIS_START/STOP if you want to exclude directories that contains 
 # useless stuff for the build process
@@ -47,6 +47,7 @@
 "src/splice.c": oasis_library_extunix_ccopt
 "src/sysconf.c": oasis_library_extunix_ccopt
 "src/common.c": oasis_library_extunix_ccopt
+"src/sockopt.c": oasis_library_extunix_ccopt
 <src/extunix.{cma,cmxa}>: use_libextunix_stubs
 <src/*.ml{,i}>: pkg_unix
 <src/*.ml{,i}>: pkg_bigarray
@@ -112,6 +113,8 @@
 "src/sysconf.c": pkg_bigarray
 "src/common.c": pkg_unix
 "src/common.c": pkg_bigarray
+"src/sockopt.c": pkg_unix
+"src/sockopt.c": pkg_bigarray
 # Executable test
 <test/test.{native,byte}>: use_extunix
 <test/test.{native,byte}>: pkg_oUnit
