@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 61e9b030b1ff34b5d3a8d83e80e2a09e) *)
+(* DO NOT EDIT (digest: 310299b9ab4273c88c5634a9b7a4a3a4) *)
 (*
    Regenerated by OASIS v0.3.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5911,7 +5911,8 @@ let setup_t =
                            "splice.c";
                            "sysconf.c";
                            "common.c";
-                           "common.h"
+                           "common.h";
+                           "sockopt.c"
                         ];
                       bs_data_files = [];
                       bs_ccopt =
@@ -6095,7 +6096,8 @@ let setup_t =
           };
      oasis_fn = Some "_oasis";
      oasis_version = "0.3.0";
-     oasis_digest = Some "v\207\182~\152\025\160\220r\222 %\231\235`-";
+     oasis_digest =
+       Some "\142\161 \181\146N\198\132\240\211\130K\227f\177\229";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false;
@@ -6103,6 +6105,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 6107 "setup.ml"
+# 6109 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
